fix: Fix vertical spacing along with link

--- a/site/themes/arangodb-docs-theme/static/css/theme.css
+++ b/site/themes/arangodb-docs-theme/static/css/theme.css
@@ -225,6 +225,8 @@ ul ul, ul ol, ol ul, ol ol {
 .link code {
     background-color: transparent;
     border: none !important;
+    position: relative;
+    top: -1px;
 }
 
 .link > i {
